--- a/categorie.html
+++ b/categorie.html
@@ -15,7 +15,7 @@
         <nav class="nav blue">
             <div class="container">
                 <a class="brand-logo" href="#">MYadmin</a>
-                <a href="#" data-target="slide-out" class="sidenav-trigger ight show-on-large"><i class="material-icons">menu</i></a>
+                <a href="#" data-target="slide-out" class="sidenav-trigger right show-on-large"><i class="material-icons">menu</i></a>
                 
                 <ul class="right hide-on-med-and-down">
                     <li>
